V0 React app (not fully functional)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore Python virtual environment
 venv/
+react-app/node_modules/
+react-app/build/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
