--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Ignore Python virtual environment
 venv/
-react-app/node_modules/
-react-app/build/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -17,6 +15,7 @@ logs/
 # Ignore database
 database/
 *.db
+instance/
 
 # Ignore database
 *.sqlite3
