--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,15 @@
 # Dependencies
 node_modules/
-/.pnp
-.pnp.js
-
-# Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-# Logs
-logs/
+# Database
+database/data/
+database/logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# Production build
-/client/build
+# Build
+/build
 /dist
-
-# Testing
-/coverage
 
 # IDE
 .idea/
@@ -31,20 +18,5 @@ yarn-error.log*
 *.swo
 
 # OS
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Temporary files
-*.tmp
-*.temp
-
-# Debug
-debug/
-.debug/
-
-# Misc
 .DS_Store
 Thumbs.db
