--- a/database/mongod.conf
+++ b/database/mongod.conf
@@ -1,16 +1,13 @@
 # MongoDB configuration file
 
 storage:
-  dbPath: /Users/aurelien/Desktop/coding/ontrak/database/data
+  dbPath: database/data
 
 systemLog:
   destination: file
-  path: /Users/aurelien/Desktop/coding/ontrak/database/logs/mongodb.log
+  path: database/logs/mongodb.log
   logAppend: true
 
 net:
   bindIp: 127.0.0.1
-  port: 27017
-
-processManagement:
-  fork: true 
+  port: 27017 
