--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.7.9",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.0",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
