--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@mui/icons-material": "^5.16.13",
     "@mui/material": "^5.16.13",
     "@mui/x-date-pickers": "^6.20.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.62.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
     "socket.io-client": "^4.8.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -57,12 +61,24 @@
     ]
   },
   "devDependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.2.4"
+    "lucide-react": "^0.471.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.2.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17"
   }
 }
