--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.16.13",
     "@mui/material": "^5.16.13",
     "@mui/x-date-pickers": "^6.20.2",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
@@ -18,16 +19,20 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
+    "@types/react-circular-progressbar": "^1.0.2",
     "@types/react-dom": "^18.2.18",
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.9",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
