--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.16.13",
     "@mui/material": "^5.16.13",
     "@mui/x-date-pickers": "^6.20.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
@@ -28,7 +29,6 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.3",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
