--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,16 @@ services:
     environment:
       - NODE_ENV=production
       - MONGODB_URI=mongodb://127.0.0.1:27017/ontrak
-      - JWT_SECRET=your-secret-key-here
-      - HOST=0.0.0.0
-      - PORT=3000
+      - JWT_SECRET=${JWT_SECRET:-change-me-in-production}
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:3000/api}
+      - REACT_APP_SOCKET_URL=${REACT_APP_SOCKET_URL:-http://localhost:3000}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     restart: unless-stopped
-
-volumes:
-  mongodb_data:
-  app_logs: 
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
