--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
+  "name": "ontrak",
+  "version": "1.0.0",
+  "private": true,
+  "workspaces": [
+    "client",
+    "server"
+  ],
+  "scripts": {
+    "start": "npm run start --workspace=server",
+    "dev": "concurrently \"npm run dev --workspace=server\" \"npm run start --workspace=client\"",
+    "build": "npm run build --workspace=client",
+    "test": "npm run test --workspace=client && npm run test --workspace=server"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.1.2",
     "clsx": "^2.1.1",
