--- a/.env.production
+++ b/.env.production
@@ -9,4 +9,7 @@ MONGODB_URI=mongodb://127.0.0.1:27017/ontrak
 JWT_SECRET=your-secret-key
 
 # Logging
-LOG_LEVEL=info 
+LOG_LEVEL=info
+
+# Frontend Configuration
+REACT_APP_API_URL=/api 
