feat: separate containers for frontend and backend

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,42 @@
 # Server Configuration
 # -----------------
 NODE_ENV=development  # Options: development, production
+PORT=3456  # Backend server port
 
 # MongoDB Configuration
 # --------------------
-MONGODB_URI=mongodb://localhost:27017/ontrak  # Local MongoDB connection string
+MONGODB_URI=mongodb://mongodb:27017/ontrak  # MongoDB connection string
 
 # Security
 # --------
 JWT_SECRET=your-secret-key-here  # Change this to a strong random string in production
+JWT_EXPIRES_IN=1d
 
 # Logging Configuration
 # -------------------
-LOG_LEVEL=debug  # Options: error, warn, info, debug (use debug for development, info for production)
+LOG_LEVEL=debug  # Options: error, warn, info, debug
+
+# Frontend Configuration
+# --------------------
+# Development: Backend URL when running locally
+BACKEND_URL=http://localhost:3456
+
+# Production: Backend URL when running in Docker
+# BACKEND_URL=http://backend:3456
+
+# Note: The frontend will use this URL for:
+# - API calls
+# - WebSocket connections
+# - Frontend logging
+
+# Development: Use this when running frontend dev server
+CLIENT_URL=http://localhost:3000
+
+# Production: Use this when running in Docker
+# CLIENT_URL=http://localhost
+# REACT_APP_API_URL=/api
 
 # Note: The following values have been hardcoded in the application:
-# - PORT=3456 (in app.js)
 # - Frontend URL=http://localhost:3000 (in CORS configuration)
 # - Socket.io URL=http://localhost:3456 (in frontend socket hook)
-# - API URL=http://localhost:3456/api (in frontend API service)
-
-# JWT Configuration
-JWT_EXPIRES_IN=1d
-
-# Client URL (for CORS)
-CLIENT_URL=http://localhost:3000 
+# - API URL=http://localhost:3456/api (in frontend API service) 
