test 4 multi-containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,33 @@
 version: '3.8'
 
 services:
-  client:
-    image: ontrak-client:beta2
-    container_name: ontrak-client
+  frontend:
+    build:
+      context: ./client
+      args:
+        - REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
     ports:
-      - "3457:3000"  # Frontend port
+      - "3457:3000"
     volumes:
       - ./.env:/app/.env:ro
-    environment:
-      - PUID=1035
-      - PGID=100
     networks:
-      - ontrak_default
-    restart: unless-stopped
-    logging:
-      options:
-        max-size: "10m"
-        max-file: "3"
-        
-  server:
-    image: ontrak-server:beta1
-    container_name: ontrak-server
+      - app-network
+
+  backend:
+    build:
+      context: ./server
     ports:
-      - "3456:3456"  # Backend port
+      - "3456:3456"
     volumes:
       - ./logs:/app/logs
       - ./backups:/app/backups
       - ./database:/app/database
       - ./.env:/app/.env:ro
     environment:
-      - TZ=Europe/Amsterdam
-      - PUID=1035
-      - PGID=100
+      - TZ=${TZ:-UTC}
     networks:
-      - ontrak_default
-    restart: unless-stopped
-    logging:
-      options:
-        max-size: "10m"
-        max-file: "3"
+      - app-network
 
 networks:
-  ontrak_default:
-    name: ontrak_default
+  app-network:
     driver: bridge
