--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,11 @@
 # Build stage
 FROM node:20-alpine as builder
+
+# Production environment variables
+ENV REACT_APP_BACKEND_URL=http://192.168.31.24:3456
+ENV REACT_APP_LOG_LEVEL=debug
+ENV NODE_ENV=production
+
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
