--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.1",
+    "lucide-react": "^0.471.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
@@ -72,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -85,7 +87,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
-    "lucide-react": "^0.471.0",
     "postcss": "^8.4.49",
     "prettier": "^3.2.4",
     "tailwindcss": "^3.4.17"
