--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@date-fns/tz": "^1.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -10,25 +11,32 @@
     "@mui/material": "^5.16.13",
     "@mui/x-date-pickers": "^6.20.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.65.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
     "@types/react-circular-progressbar": "^1.0.2",
     "@types/react-dom": "^18.2.18",
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
@@ -73,16 +81,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-hover-card": "^1.1.4",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@types/lodash": "^4.17.14",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
-    "class-variance-authority": "^0.7.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
