--- a/client/.dockerignore
+++ b/client/.dockerignore
@@ -7,6 +7,10 @@ yarn-error.log
 # Environment
 .env
 .env.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Build output
 build
