docs: updated readme and security docs

--- a/.env.example
+++ b/.env.example
@@ -1,42 +1,13 @@
 # Server Configuration
-# -----------------
-NODE_ENV=development  # Options: development, production
-PORT=3456  # Backend server port
-
-# MongoDB Configuration
-# --------------------
-MONGODB_URI=mongodb://mongodb:27017/ontrak  # MongoDB connection string
-
-# Security
-# --------
-JWT_SECRET=your-secret-key-here  # Change this to a strong random string in production
-JWT_EXPIRES_IN=1d
-
-# Logging Configuration
-# -------------------
-LOG_LEVEL=debug  # Options: error, warn, info, debug
-
-# Frontend Configuration
-# --------------------
-# Development: Backend URL when running locally
+NODE_ENV=development
+CLIENT_URL=http://localhost:3000
 BACKEND_URL=http://localhost:3456
 
-# Production: Backend URL when running in Docker
-# BACKEND_URL=http://backend:3456
+# MongoDB Configuration
+MONGODB_URI=mongodb://127.0.0.1:27017/ontrak
 
-# Note: The frontend will use this URL for:
-# - API calls
-# - WebSocket connections
-# - Frontend logging
+# Security
+JWT_SECRET=your-secret-key
 
-# Development: Use this when running frontend dev server
-CLIENT_URL=http://localhost:3000
-
-# Production: Use this when running in Docker
-# CLIENT_URL=http://localhost
-# REACT_APP_API_URL=/api
-
-# Note: The following values have been hardcoded in the application:
-# - Frontend URL=http://localhost:3000 (in CORS configuration)
-# - Socket.io URL=http://localhost:3456 (in frontend socket hook)
-# - API URL=http://localhost:3456/api (in frontend API service) 
+# Logging
+LOG_LEVEL=debug
