fix: logs and .env loading

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     image: ontrak-server:beta1
     container_name: ontrak-server
     user: "node"
-    ports:
-      - "3456:3456"  # Backend port
+    expose:
+      - "3456"  # Only expose to internal network
     volumes:
       - ./logs:/app/logs
       - ./backups:/app/backups
@@ -34,9 +34,6 @@ services:
       - PUID=1035
       - PGID=100
       - NODE_ENV=production
-      - CLIENT_URL=http://192.168.31.24:3457
-      - BACKEND_URL=http://192.168.31.24:3456
-      - PORT=3456
     networks:
       - ontrak_default
     restart: unless-stopped
