--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -11,6 +11,7 @@ server {
 
     # Proxy backend API requests
     location /api/ {
+        # Use Docker service name for internal routing
         proxy_pass http://ontrak-server:3456;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -22,6 +23,23 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 90s;
         proxy_connect_timeout 90s;
+
+        # Add CORS headers to allow the IP address
+        add_header 'Access-Control-Allow-Origin' 'http://192.168.31.24:3456' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'http://192.168.31.24:3456' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
     }
 
     # Socket.io support
